tests/expectations/compiler/records/init_expression_type_fail.out
Error [ETYC0372057]: Only `transition` functions can have a record as input or output.
    --> compiler-test:11:40
     |
  11 | function mint(r0: address, r1: u64) -> Token {
     |                                        ^^^^^
Error [ETYC0372117]: Expected type `address` but type `u64` was found.
    --> compiler-test:13:16
     |
  13 |         owner: r1, // This variable should be type address.
     |                ^^
Error [ETYC0372117]: Expected type `u64` but type `address` was found.
    --> compiler-test:14:17
     |
  14 |         amount: r0, // This variable should be type u64.
     |                 ^^
Error [ETYC0372042]: Only `inline` can be called from a `function`, `inline`, or `constructor`.
    --> compiler-test:20:20
     |
  20 |     let t: Token = mint(x, c);
     |                    ^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
